--- a/extension/index.html
+++ b/extension/index.html
@@ -7,29 +7,15 @@
         <link rel='stylesheet' href='styles.css'>
     </head>
     <body>
-      <table>
-          <tr class="vs-icon-table">
-            <td>
-                <a>
-                    <i class="fa fa-microphone" aria-hidden="true"></i>
-                </a>
-            </td>
-            <td>
-                <a>
-                    <i class="fa fa-stop-circle-o" aria-hidden="true"></i>
-                </a>
-            </td>
-            <td>
-                <a>
-                    <i class="fa fa-check-circle" aria-hidden="true"></i>
-                </a>
-            </td>
-            <td>
-                <a>
-                    <i class="fa fa-trash" aria-hidden="true"></i>
-                </a>
-            </td>
-          </tr>
+        <table>
+            <tr class="vs-icon-table">
+                <td><a id="js-record"><i class="fa fa-microphone" aria-hidden="true"></i></a></td>
+                <td><a id="js-stop"><i class="fa fa-stop-circle-o" aria-hidden="true"></i></a></td>
+                <td><a id="js-accept"><i class="fa fa-check-circle" aria-hidden="true"></i></a></td>
+                <td><a id="js-reject"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
+            </tr>
         </table>
+        <script src="assets/libs/jquery-3.2.1/jquery-3.2.1.min.js"></script>
+        <script src="js/actions.js"></script>
     </body>
 </html>
